{{$NEXT}}

- Added support for tidying in multiple parallel jobs at once. You can pass a
  "--jobs" argument to tidyall or pass a "jobs" param to
  Code::TidyAll->new. This requires that you install Parallel::ForkManager.


0.49     2016-07-22

- The verbose output now just shows the plugin name in the "applying the
  following plugins: ..." message, rather than stringifying the plugin
  objects.


0.48     2016-06-16

- The Git pre-commit hook now only looks at the files that are staged for
  committing, rather than everything in the git repo that has been
  modified. Note that this does not change the tidyall script's "-g" flag,
  which still operates on all modified files in the repo.

- Check the exit code when running js-beautify and throw an error if this is
  non-zero. Patch by Graham Knop. GitHub #61.


0.46     2016-04-17

- Fix a use line which specified the required version of Text::Diff as
  "v1.44". This caused weirdness to cascade in the Makefile.PL. Reported by
  Olaf Alders. GitHub #60.


0.45     2016-04-11

- Some changes intended to be internal-only in the last release broke the
  handling of ignore and select config lines with multiple space-separated
  values. This should now work again (and is tested). Reported by Martin
  Gruner. GitHub #44.


0.44     2016-04-10

- Changed the shebang config item to actually accept multi items on different
  lines. The old method of specifying more than one item on a single line,
  separated by spaces, will continue to work, but is no longer documented.


0.43     2016-03-27

- Use the same improved "git status" code for Code::TidyAll::Git::Precommit as
  we do in bin/tidyall for the -g option. Patch by Finn Smith. GitHub #57.


0.42     2016-03-10

- Specify Text::Diff version as 'v1.44' instead of '1.44'. This fixes an
  inexplicable error that the OTRS project was having with the previous
  release (GitHub #53). Fixed by Martin Gruner. GitHub #54.


0.41     2016-03-04
